textarea overflow fix

--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -62,7 +62,7 @@
                     padding-left: 8px;
                     font-family: "montserrat", sans-serif;
                     font-size: 14px;
-
+                    overflow: hidden;
                 }
             }
 
